# simple_bevy_scene

./: Cargo.toml  README  README.md
src/: main.rs
